--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   <meta property="og:url" content="https://simplicy.info/" />
   <meta property="og:description" content="A Personal Site." />
   <meta property="og:image" content="/icon.svg" />
-  <!-- Matomo -->
+<!-- Matomo -->
 <script>
   var _paq = window._paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//192.168.0.205:83/";
+    var u="//analytics.sympil.com/";
     _paq.push(['setTrackerUrl', u+'matomo.php']);
     _paq.push(['setSiteId', '1']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
@@ -26,7 +27,6 @@
   })();
 </script>
 <!-- End Matomo Code -->
-
 </head>
 
 <body class="theme-light">
