--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
   <meta property="og:description" content="A Personal Site." />
   <meta property="og:image" content="/icon.svg" />
  <!-- Matomo Tag Manager -->
-<!-- <script> -->
-<!--   var _mtm = window._mtm = window._mtm || []; -->
-<!--   _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'}); -->
-<!--   (function() { -->
-<!--     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; -->
-<!--     g.async=true; g.src='https://analytics.sympil.com/js/container_512cTGif.js'; s.parentNode.insertBefore(g,s); -->
-<!--   })(); -->
-<!-- </script> -->
+<script>
+  var _mtm = window._mtm = window._mtm || [];
+  _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});
+  (function() {
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src='https://analytics.sympil.com/js/container_512cTGif.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
 <!-- End Matomo Tag Manager --> 
 <!-- Matomo -->
-<!-- <script> -->
-<!--   var _paq = window._paq = window._paq || []; -->
-<!--   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */ -->
-<!--   _paq.push(['trackPageView']); -->
-<!--   _paq.push(['enableLinkTracking']); -->
-<!--   (function() { -->
-<!--     var u="//analytics.sympil.com/"; -->
-<!--     _paq.push(['setTrackerUrl', u+'matomo.php']); -->
-<!--     _paq.push(['setSiteId', '1']); -->
-<!--     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; -->
-<!--     g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s); -->
-<!--   })(); -->
-<!-- </script> -->
+<script>
+  var _paq = window._paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//analytics.sympil.com/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '1']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
 <!-- End Matomo Code -->
 
 </head>
