--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/clothes-hanger.svg" />
+  <link rel="icon" type="image/svg+xml" href="/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SIMPLICY.INFO</title>
   <meta property="og:title" content="SIMPLICY.INFO" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://simplicy.info/" />
   <meta property="og:description" content="A Personal Site." />
-  <meta property="og:image" content="/icon.svg" />
+  <meta property="og:image" content="/icon.png" />
  <!-- Matomo Tag Manager -->
 <script>
   var _mtm = window._mtm = window._mtm || [];
